Kubernetes/working_solutions/ingress-nginx/agronewiki-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: agronewiki-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: agrotech-dev
spec:
  ingressClassName: nginx

  rules:
  - host: agronewiki.prodata.local
    http:
      paths:

      - backend:
          service:
            name: agronewiki-service
            port:
              number: 8080
        path: /
        pathType: Prefix
